--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,8 @@ spring.mvc.log-request-details=true
 
 # cf. https://www.baeldung.com/sql-logging-spring-boot
 # Configuration des logs SQL JPA
+server.error.include-stacktrace=never
+server.error.include-exception=false
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
